@@ -1329,10 +1329,10 @@ Sample DrawableImplementation::getPaletteAsNormalizedRGBA() const
   const Description palette(getPalette());
   const UnsignedInteger size = palette.getSize();
   Sample normalizedRGBA(size, 4);
-  Indices rgba(4);
   for (UnsignedInteger i = 0; i < size; ++i)
   {
-    (void) ScanColorCode(palette[i], rgba);
+    const String hexCode(ConvertFromName(palette[i]));
+    const Indices rgba(ConvertToRGBA(hexCode));
     normalizedRGBA(i, 0) = rgba[0] / 255.0;
     normalizedRGBA(i, 1) = rgba[1] / 255.0;
     normalizedRGBA(i, 2) = rgba[2] / 255.0;
