@@ -1,0 +1,51 @@
+palette[#ff0000,#ff8000,#ffff00,#80ff00,#00ff00,#00ff80,#00ffff,#0080ff,blue,#8000ff,#ff00ff,#ff0080,#cc0000,#cc6600,#cccc00,#66cc00,#00cc00,#00cc66,#00cccc,#0066cc,#0000cc,#6600cc,#cc00cc,#cc0066,#990000,#994d00,#999900,#4d9900,#009900,#00994d,#009999,#004d99,#000099,#4d0099,#990099,#99004d,#660000,#663300,#666600,#336600,#006600,#006633,#006666,#003366,#000066,#330066,#660066,#660033,#330000,#331900]#50
+palette (RGBA) 0 : [ 1         0         0         1         ]
+ 1 : [ 1         0.501961  0         1         ]
+ 2 : [ 1         1         0         1         ]
+ 3 : [ 0.501961  1         0         1         ]
+ 4 : [ 0         1         0         1         ]
+ 5 : [ 0         1         0.501961  1         ]
+ 6 : [ 0         1         1         1         ]
+ 7 : [ 0         0.501961  1         1         ]
+ 8 : [ 0         0         1         1         ]
+ 9 : [ 0.501961  0         1         1         ]
+10 : [ 1         0         1         1         ]
+11 : [ 1         0         0.501961  1         ]
+12 : [ 0.8       0         0         1         ]
+13 : [ 0.8       0.4       0         1         ]
+14 : [ 0.8       0.8       0         1         ]
+15 : [ 0.4       0.8       0         1         ]
+16 : [ 0         0.8       0         1         ]
+17 : [ 0         0.8       0.4       1         ]
+18 : [ 0         0.8       0.8       1         ]
+19 : [ 0         0.4       0.8       1         ]
+20 : [ 0         0         0.8       1         ]
+21 : [ 0.4       0         0.8       1         ]
+22 : [ 0.8       0         0.8       1         ]
+23 : [ 0.8       0         0.4       1         ]
+24 : [ 0.6       0         0         1         ]
+25 : [ 0.6       0.301961  0         1         ]
+26 : [ 0.6       0.6       0         1         ]
+27 : [ 0.301961  0.6       0         1         ]
+28 : [ 0         0.6       0         1         ]
+29 : [ 0         0.6       0.301961  1         ]
+30 : [ 0         0.6       0.6       1         ]
+31 : [ 0         0.301961  0.6       1         ]
+32 : [ 0         0         0.6       1         ]
+33 : [ 0.301961  0         0.6       1         ]
+34 : [ 0.6       0         0.6       1         ]
+35 : [ 0.6       0         0.301961  1         ]
+36 : [ 0.4       0         0         1         ]
+37 : [ 0.4       0.2       0         1         ]
+38 : [ 0.4       0.4       0         1         ]
+39 : [ 0.2       0.4       0         1         ]
+40 : [ 0         0.4       0         1         ]
+41 : [ 0         0.4       0.2       1         ]
+42 : [ 0         0.4       0.4       1         ]
+43 : [ 0         0.2       0.4       1         ]
+44 : [ 0         0         0.4       1         ]
+45 : [ 0.2       0         0.4       1         ]
+46 : [ 0.4       0         0.4       1         ]
+47 : [ 0.4       0         0.2       1         ]
+48 : [ 0.2       0         0         1         ]
+49 : [ 0.2       0.0980392 0         1         ]
