@@ -50,6 +50,7 @@
  * #953 (RandomMixture can fail with truncated distribution)
  * #954 (CompositeProcess::getFuture() broken)
  * #957 (RandomMixture::getDispersionIndicator() takes a long time)
+ * #959 (The PolygonArray and Polygon classes poorly manage the colors)
 
 == 1.11 release (2018-05-11) == #release-1.11
 
